--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "zxx",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
